--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ratherlabs.components.library",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c"
@@ -13,5 +12,11 @@
     "@types/react": "^18.2.14",
     "react": "^18.2.0",
     "typescript": "^5.1.3"
-  }
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
