--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^18.2.14",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "main": "dist/cjs/index.js",
