--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/react": "^18.2.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
+    "rollup": "^3.25.2",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.3",
     "typescript": "^5.1.3"
   },
   "main": "dist/cjs/index.js",
