--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ratherlabs.components.library",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,6 +28,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.2.14",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.0",
     "postcss": "^8.4.24",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
