--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ratherlabs.components.library",
+  "name": "@cnerylozada/ratherlabs.components.library",
   "version": "1.0.7",
   "description": "",
   "scripts": {
