--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cnerylozada/ratherlabs.components.library",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -46,5 +46,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@heroicons/react": "^2.0.18"
+  }
 }
